# MathstyleOriginal

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  EULAenglish.html  Schoolar.pro  Schoolar.pro.user.ed6167e  Schoolar.qrc  Schoolar.rc  algebra_operations.cpp  algebra_operations.h  clang-format.sh  lang_ru.qm  lang_ru.ts  lang_ru_readme.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mathomatic.cpp  mathomatic.h  problems.hst  qformulaeditor.cpp  qformulaeditor.h  qrc_Schoolar.cpp  settings.ini  style.css  taboutdialog.cpp  taboutdialog.h  taboutdialog.ui  tbuttonssheetview.cpp  tbuttonssheetview.h  teuladialog.cpp  teuladialog.h  teuladialog.ui  tfreeaboutdialog.cpp  tfreeaboutdialog.h  tfreeaboutdialog.ui  tglobeview.cpp  tglobeview.h  (+21 more)
Base/: PrettyPrinterTransformer.cpp  PrettyPrinterTransformer.h  THTMLWriter.cpp  THTMLWriter.h  TNumericMask.cpp  TNumericMask.h  arithmetic.cpp  arithmetic.h  editableformula.cpp  editableformula.h  formulaplotter.cpp  formulaplotter.h  formulaplotter_old.cpp  polynom.cpp  polynom.h  symbols.cpp  symbols.h  taxes.cpp  taxes.h  texpressionploter.cpp  texpressionploter.cpp.2del  texpressionploter.h  texpressionploter.h.2del  tinterval.cpp  tinterval.h  tline.cpp  tline.h  tphrases.cpp  tphrases.h
Eula/: EULA_english.html  EULA_english.odt  EULA_english_translated.html  EULA_english_translated.odt  EULA_russian.html  EULA_russian.odt
Icon/: Thumbs.db  favicon.xcf  favicon_90x65.xcf
Manual/: User Manual.odt  fields.xcf  index.html  readme.1st
Pictures/Formulas/: edit.xcf  erase.xcf  sin.xcf
Pictures/Style/: stripesforvertical.xcf  uparrow.xcf
Pictures/Tasks/: blue.xcf  cyan.xcf  derivative.xcf  equation.xcf  green.xcf  inequality.xcf  lightblue.xcf  lightgreen.xcf  lightpurple.xcf  lightred.xcf  purple.xcf  red.xcf  saved.xcf  simplify.xcf  systemsofequations.xcf  systemsofinequalities.xcf  template.xcf  yellow.xcf
Pictures/tea/: lamp.xcf
Problems/: GraphicsProblems.cpp  GraphicsProblems.h  ObjectsFactory.cpp  ObjectsFactory.h  RandomFunction.cpp  RandomFunction.h  TPolynomIntegralproblem.cpp  TPolynomIntegralproblem.cpp2  TPolynomIntegralproblem.h  TPolynomIntegralproblem.h2  TPolynomProblems.cpp  TPolynomProblems.h  tderivativeproblem.cpp  tderivativeproblem.h  tmaclaurinseriesproblem.cpp  tmaclaurinseriesproblem.cpp2  tmaclaurinseriesproblem.h  tmaclaurinseriesproblem.h2  tpolynomproblems.cpp.old  tpolynomproblems.h.old  tpowerproblems.cpp  tpowerproblems.h  tproblem.cpp  tproblem.h  trationalsumproblem.cpp  trationalsumproblem.h  tsystemofequations.cpp  tsystemofequations.h  ttrigonometryproblems.cpp  ttrigonometryproblems.h
